# docs/swagger.yaml
@@ -1200,10 +1200,6 @@ definitions:
       name:
         maxLength: 128
         type: string
-      permalink:
-        maximum: 3
-        minimum: 0
-        type: integer
       short_description:
         maxLength: 255
         type: string
@@ -1213,7 +1209,6 @@ definitions:
     required:
     - contact_email
     - name
-    - permalink
     - site_url
     type: object
   schema.SiteGeneralResp:
@@ -1227,10 +1222,6 @@ definitions:
       name:
         maxLength: 128
         type: string
-      permalink:
-        maximum: 3
-        minimum: 0
-        type: integer
       short_description:
         maxLength: 255
         type: string
@@ -1240,7 +1231,6 @@ definitions:
     required:
     - contact_email
     - name
-    - permalink
     - site_url
     type: object
   schema.SiteInterfaceReq:
@@ -1299,16 +1289,26 @@ definitions:
     type: object
   schema.SiteSeoReq:
     properties:
+      permalink:
+        maximum: 3
+        minimum: 0
+        type: integer
       robots:
         type: string
     required:
+    - permalink
     - robots
     type: object
   schema.SiteSeoResp:
     properties:
+      permalink:
+        maximum: 3
+        minimum: 0
+        type: integer
       robots:
         type: string
     required:
+    - permalink
     - robots
     type: object
   schema.SiteWriteReq:
